--- a/1.2 Installation.md
+++ b/1.2 Installation.md
@@ -21,4 +21,4 @@ Then edit `propel.yaml` and replace the values of `dsn`, `user`, `password` by c
 
 **Versions >= 1.4.4 only**: `$ cp app/config/config.yml.dist app/config/config.yml`
 
-See the [configuration section](#configuration) for more information about configuration.
+See the [configuration section](https://gitnet.fr/deblan/gist/wiki/1.2.1+Configuration) for more information about configuration.
