--- a/1. Gist.md
+++ b/1. Gist.md
@@ -16,3 +16,7 @@ https://www.deblan.io/post/517/gist-est-dans-la-place
 ### Embeded Gist
 
 ![Gist](https://upload.deblan.org/u/2018-08/5b7ab81c.png "Embeded Gist")
+
+---
+
+[Next: 1.1 Requirements](https://gitnet.fr/deblan/gist/wiki/1.1+Requirements)
