--- a/1.2.1 Configuration.md
+++ b/1.2.1 Configuration.md
@@ -35,3 +35,7 @@ Edit `app/config/config.yml`.
 * `api.api_key_required`: defines if the API key is required to access the API (`true` or `false`)
 * `api.client.api_key`: defines the client API key (`string`)
 
+
+---
+
+[Previous: 1.2 Installation](https://gitnet.fr/deblan/gist/wiki/1.2+Installation) / [Next: 1.2.2 Web server](https://gitnet.fr/deblan/gist/wiki/1.2.2+Web+server)
