--- a/1.2.2 Web server.md
+++ b/1.2.2 Web server.md
@@ -12,3 +12,7 @@ $ sudo service apache2 restart
 ```
 
 `app_dev.php` is the development router. Access is granted for an IP range defined in the same file.
+
+---
+
+[Previous: 1.2.1 Configuration](https://gitnet.fr/deblan/gist/wiki/1.2.1+Configuration) / [Next: 1.2.3 Cache](https://gitnet.fr/deblan/gist/wiki/1.2.3+Cache)
