--- a/1.2.3 Cache.md
+++ b/1.2.3 Cache.md
@@ -4,3 +4,7 @@ Gist generates two types of cache:
 * Files to preserve computing resources
 
 You can remove the directory `cache` anytime you want.
+
+---
+
+[Previous: 1.2.2 Web server](https://gitnet.fr/deblan/gist/wiki/1.2.2+Web+server) / [Next: 1.2.4 Makefile](https://gitnet.fr/deblan/gist/wiki/1.2.4+Makefile)
