--- a/1.2.4 Makefile.md
+++ b/1.2.4 Makefile.md
@@ -19,3 +19,7 @@ For example:
 
     $ export COMPOSER=/path/to/composer
     $ make composer
+
+---
+
+[Previous: 1.2.3 Cache](https://gitnet.fr/deblan/gist/wiki/1.2.3+Cache) / [Next: 1.3 Upgrade](https://gitnet.fr/deblan/gist/wiki/1.3+Upgrade)
