--- a/1.5 Console.md
+++ b/1.5 Console.md
@@ -7,3 +7,7 @@
 
 * **List your gists**: `$ app/console --help gists`
 * **Delete a gist**: `$ app/console --help delete`
+
+---
+
+[Previous: 1.4 API](https://gitnet.fr/deblan/gist/wiki/1.4+API) / [Next: 1.6 Contributors](https://gitnet.fr/deblan/gist/wiki/1.6+Contributors)
