--- a/1.1 Requirements.md
+++ b/1.1 Requirements.md
@@ -12,3 +12,7 @@ $ curl -sS https://getcomposer.org/installer | php
 $ chmod +x composer.phar
 $ sudo mv composer.phar /usr/local/bin/composer
 ```
+
+---
+
+[Previous: 1. Gist](https://gitnet.fr/deblan/gist/wiki/1.+Gist) / [Next: 1.2 Installation](https://gitnet.fr/deblan/gist/wiki/1.2+Installation)
