--- a/1.2 Installation.md
+++ b/1.2 Installation.md
@@ -22,3 +22,7 @@ Then edit `propel.yaml` and replace the values of `dsn`, `user`, `password` by c
 **Versions >= 1.4.4 only**: `$ cp app/config/config.yml.dist app/config/config.yml`
 
 See the [configuration section](https://gitnet.fr/deblan/gist/wiki/1.2.1+Configuration) for more information about configuration.
+
+---
+
+[Previous: 1.1 Requirements](https://gitnet.fr/deblan/gist/wiki/1.1+Requirements) / [Next: 1.2.1 Configuration](https://gitnet.fr/deblan/gist/wiki/1.2.1+Configuration)
