--- a/1.4 API.md
+++ b/1.4 API.md
@@ -168,3 +168,7 @@ Response code `400`:
 ```javascript
 {"message":"Invalid Gist", "error":true}
 ```
+
+---
+
+[Previous: 1.3 Upgrade](https://gitnet.fr/deblan/gist/wiki/1.3+Upgrade) / [Next: 1.5 Console](https://gitnet.fr/deblan/gist/wiki/1.5+Console)
