Update page '1.2.2 Web server'

--- a/1.2.2 Web server.md
+++ b/1.2.2 Web server.md
@@ -1,4 +1,4 @@
-The web server must have permission to write into `data`.
+The web server must have permission to write into `data` and `cache`.
 
 ```    
 $ sudo chown -R www-data:www-data data
