Update page '1.2.3 Cache'

--- a/1.2.3 Cache.md
+++ b/1.2.3 Cache.md
@@ -3,7 +3,7 @@ Gist generates two types of cache:
 * HTTP Cache using the header `Cache-Control` with `max-age` and `s-maxage` attributes (client and proxy TTLs)
 * Files to preserve computing resources
 
-You can remove the directory `cache` anytime you want.
+You can remove the directory `cache` anytime you want using `make clean-cache` or `rm -fr cache/*`.
 
 ---
 
