Update page '1.2.4 Makefile'

--- a/1.2.4 Makefile.md
+++ b/1.2.4 Makefile.md
@@ -4,6 +4,7 @@ A Makefile is provided to automate some tasks.
 * `make composer` will install PHP dependencies via composer
 * `make npm` will install CSS/JS dependencies via NPM
 * `make update` will update the application
+* `make clean-cache` will remove the content of the cache directory
 * `make propel` will generate propel migrations (database and files)
 * `make run` will run development server on http://127.0.0.1:8080/
 
