--- a/1.-Gist.md
+++ b/1.-Gist.md
@@ -19,4 +19,4 @@ https://www.deblan.io/post/517/gist-est-dans-la-place
 
 ---
 
-[Next: 1.1 Requirements](https://gitnet.fr/deblan/gist/wiki/1.1+Requirements)
+[Next: 1.1-Requirements](https://gitnet.fr/deblan/gist/wiki/1.1-Requirements)
