--- a/1.2-Installation.md
+++ b/1.2-Installation.md
@@ -25,4 +25,4 @@ See the [configuration section](https://gitnet.fr/deblan/gist/wiki/1.2.1+Configu
 
 ---
 
-[Previous: 1.1 Requirements](https://gitnet.fr/deblan/gist/wiki/1.1+Requirements) / [Next: 1.2.1 Configuration](https://gitnet.fr/deblan/gist/wiki/1.2.1+Configuration)
+[Previous: 1.1-Requirements](https://gitnet.fr/deblan/gist/wiki/1.1-Requirements) / [Next: 1.2.1-Configuration](https://gitnet.fr/deblan/gist/wiki/1.2.1-Configuration)
