--- a/1.2.2-Web-server.md
+++ b/1.2.2-Web-server.md
@@ -15,4 +15,4 @@ $ sudo service apache2 restart
 
 ---
 
-[Previous: 1.2.1 Configuration](https://gitnet.fr/deblan/gist/wiki/1.2.1+Configuration) / [Next: 1.2.3 Cache](https://gitnet.fr/deblan/gist/wiki/1.2.3+Cache)
+[Previous: 1.2.1-Configuration](https://gitnet.fr/deblan/gist/wiki/1.2.1-Configuration) / [Next: 1.2.3-Cache](https://gitnet.fr/deblan/gist/wiki/1.2.3-Cache)
