--- a/1.2.3-Cache.md
+++ b/1.2.3-Cache.md
@@ -7,4 +7,4 @@ You can remove the directory `cache` anytime you want using `make clean-cache` o
 
 ---
 
-[Previous: 1.2.2 Web server](https://gitnet.fr/deblan/gist/wiki/1.2.2+Web+server) / [Next: 1.2.4 Makefile](https://gitnet.fr/deblan/gist/wiki/1.2.4+Makefile)
+[Previous: 1.2.2-Web-server](https://gitnet.fr/deblan/gist/wiki/1.2.2-Web-server) / [Next: 1.2.4-Makefile](https://gitnet.fr/deblan/gist/wiki/1.2.4-Makefile)
