--- a/1.3-Upgrade.md
+++ b/1.3-Upgrade.md
@@ -15,4 +15,4 @@ If you upgrade to v1.7.0 or more, see the [configuration section](https://gitnet
 
 ---
 
-[Previous: 1.2.4 Makefile](https://gitnet.fr/deblan/gist/wiki/1.2.4+Makefile) / [Next: 1.4 API](https://gitnet.fr/deblan/gist/wiki/1.4+API)
+[Previous: 1.2.4-Makefile](https://gitnet.fr/deblan/gist/wiki/1.2.4-Makefile) / [Next: 1.4-API](https://gitnet.fr/deblan/gist/wiki/1.4-API)
