--- a/1.4-API.md
+++ b/1.4-API.md
@@ -171,4 +171,4 @@ Response code `400`:
 
 ---
 
-[Previous: 1.3 Upgrade](https://gitnet.fr/deblan/gist/wiki/1.3+Upgrade) / [Next: 1.5 Console](https://gitnet.fr/deblan/gist/wiki/1.5+Console)
+[Previous: 1.3-Upgrade](https://gitnet.fr/deblan/gist/wiki/1.3-Upgrade) / [Next: 1.5-Console](https://gitnet.fr/deblan/gist/wiki/1.5-Console)
