--- a/1.5-Console.md
+++ b/1.5-Console.md
@@ -10,4 +10,4 @@
 
 ---
 
-[Previous: 1.4 API](https://gitnet.fr/deblan/gist/wiki/1.4+API) / [Next: 1.6 Contributors](https://gitnet.fr/deblan/gist/wiki/1.6+Contributors)
+[Previous: 1.4-API](https://gitnet.fr/deblan/gist/wiki/1.4-API) / [Next: 1.6-Contributors](https://gitnet.fr/deblan/gist/wiki/1.6-Contributors)
