--- a/1.6-Contributors.md
+++ b/1.6-Contributors.md
@@ -13,4 +13,4 @@
 
 ---
 
-[Previous: 1.6 Contributors](https://gitnet.fr/deblan/gist/wiki/1.6+Contributors)
+[Previous: 1.6-Contributors](https://gitnet.fr/deblan/gist/wiki/1.6-Contributors)
