--- a/1.2.1-Configuration.md
+++ b/1.2.1-Configuration.md
@@ -38,4 +38,4 @@ Edit `app/config/config.yml`.
 
 ---
 
-[Previous: 1.2 Installation](https://gitnet.fr/deblan/gist/wiki/1.2+Installation) / [Next: 1.2.2 Web server](https://gitnet.fr/deblan/gist/wiki/1.2.2+Web+server)
+[Previous: 1.2-Installation](https://gitnet.fr/deblan/gist/wiki/1.2-Installation) / [Next: 1.2.2-Web-server](https://gitnet.fr/deblan/gist/wiki/1.2.2-Web-server)
