--- a/1.2.4-Makefile.md
+++ b/1.2.4-Makefile.md
@@ -23,4 +23,4 @@ For example:
 
 ---
 
-[Previous: 1.2.3 Cache](https://gitnet.fr/deblan/gist/wiki/1.2.3+Cache) / [Next: 1.3 Upgrade](https://gitnet.fr/deblan/gist/wiki/1.3+Upgrade)
+[Previous: 1.2.3-Cache](https://gitnet.fr/deblan/gist/wiki/1.2.3-Cache) / [Next: 1.3-Upgrade](https://gitnet.fr/deblan/gist/wiki/1.3-Upgrade)
